// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages definePassengerType should render correctly when on the group ticket user journey 1`] = `
<Component
  description="Define Passenger Type page of the Fares Data Build Tool"
  errors={Array []}
  title="Define Passenger Type - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/definePassengerType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div>
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--l"
      >
        <h1
          className="govuk-fieldset__heading"
          id="define-passenger-type-page-heading"
        >
          Provide passenger type details
        </h1>
      </legend>
      <br />
      <br />
      <div
        className="govuk-form-group "
      >
        <fieldset
          aria-describedby="number-of-passenger-type-heading"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--m"
          >
            <h2
              className="govuk-fieldset__heading"
              id="number-of-passenger-type-heading"
            >
              How many child passengers can be in the group?
            </h2>
          </legend>
          <div
            className="govuk-form-group"
            key="min-number-of-passengers"
          >
            <label
              className="govuk-label"
              htmlFor="min-number-of-passengers"
            >
              Minimum (optional)
            </label>
            <FormElementWrapper
              errorClass="govuk-input--error"
              errorId=""
              errors={Array []}
            >
              <input
                className="govuk-input govuk-input--width-2"
                defaultValue=""
                id="min-number-of-passengers"
                name="minNumber"
                type="text"
              />
            </FormElementWrapper>
          </div>
          <div
            className="govuk-form-group"
            key="max-number-of-passengers"
          >
            <label
              className="govuk-label"
              htmlFor="max-number-of-passengers"
            >
              Maximum (required)
            </label>
            <FormElementWrapper
              errorClass="govuk-input--error"
              errorId=""
              errors={Array []}
            >
              <input
                className="govuk-input govuk-input--width-2"
                defaultValue=""
                id="max-number-of-passengers"
                name="maxNumber"
                type="text"
              />
            </FormElementWrapper>
          </div>
        </fieldset>
        <br />
        <br />
      </div>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": Any<String>,
              "id": "define-passenger-age-range",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "age-range-required-conditional",
                "hint": Object {
                  "content": "Enter a minimum and/or maximum age for this passenger type.",
                  "id": "define-passenger-age-range-hint",
                },
                "id": "age-range-required",
                "inputErrors": Array [],
                "inputType": "text",
                "inputs": Array [
                  Object {
                    "id": "age-range-min",
                    "label": "Minimum Age (if applicable)",
                    "name": "ageRangeMin",
                  },
                  Object {
                    "id": "age-range-max",
                    "label": "Maximum Age (if applicable)",
                    "name": "ageRangeMax",
                  },
                ],
                "label": "Yes",
                "name": "ageRange",
                "value": "Yes",
              },
              Object {
                "id": "age-range-not-required",
                "label": "No",
                "name": "ageRange",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-age-range"
      />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": Any<String>,
              "id": "define-passenger-proof",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "proof-required-conditional",
                "hint": Object {
                  "content": "Select the applicable proof document(s).",
                  "id": "define-passenger-proof-hint",
                },
                "id": "proof-required",
                "inputErrors": Array [],
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "membership-card",
                    "label": "Membership Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "student-card",
                    "label": "Student Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "identity-document",
                    "label": "Identity Document",
                    "name": "proofDocuments",
                  },
                ],
                "label": "Yes",
                "name": "proof",
                "value": "Yes",
              },
              Object {
                "id": "proof-not-required",
                "label": "No",
                "name": "proof",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-proof"
      />
    </div>
    <input
      name="groupPassengerType"
      type="hidden"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages definePassengerType should render correctly when on the non-group ticket user journey 1`] = `
<Component
  description="Define Passenger Type page of the Fares Data Build Tool"
  errors={Array []}
  title="Define Passenger Type - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/definePassengerType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div>
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--l"
      >
        <h1
          className="govuk-fieldset__heading"
          id="define-passenger-type-page-heading"
        >
          Provide passenger type details
        </h1>
      </legend>
      <span
        className="govuk-hint"
        id="define-passenger-type-hint"
      >
        Select if the passenger type requires an age range or proof document
      </span>
      <br />
      <br />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": Any<String>,
              "id": "define-passenger-age-range",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "age-range-required-conditional",
                "hint": Object {
                  "content": "Enter a minimum and/or maximum age for this passenger type.",
                  "id": "define-passenger-age-range-hint",
                },
                "id": "age-range-required",
                "inputErrors": Array [],
                "inputType": "text",
                "inputs": Array [
                  Object {
                    "id": "age-range-min",
                    "label": "Minimum Age (if applicable)",
                    "name": "ageRangeMin",
                  },
                  Object {
                    "id": "age-range-max",
                    "label": "Maximum Age (if applicable)",
                    "name": "ageRangeMax",
                  },
                ],
                "label": "Yes",
                "name": "ageRange",
                "value": "Yes",
              },
              Object {
                "id": "age-range-not-required",
                "label": "No",
                "name": "ageRange",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-age-range"
      />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": Any<String>,
              "id": "define-passenger-proof",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "proof-required-conditional",
                "hint": Object {
                  "content": "Select the applicable proof document(s).",
                  "id": "define-passenger-proof-hint",
                },
                "id": "proof-required",
                "inputErrors": Array [],
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "membership-card",
                    "label": "Membership Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "student-card",
                    "label": "Student Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "identity-document",
                    "label": "Identity Document",
                    "name": "proofDocuments",
                  },
                ],
                "label": "Yes",
                "name": "proof",
                "value": "Yes",
              },
              Object {
                "id": "proof-not-required",
                "label": "No",
                "name": "proof",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-proof"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages definePassengerType should render errors correctly when input errors are passed to the page 1`] = `
<Component
  description="Define Passenger Type page of the Fares Data Build Tool"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a minimum or maximum age",
        "id": "define-passenger-age-range",
      },
      Object {
        "errorMessage": "Enter a minimum or maximum age",
        "id": "define-passenger-age-range",
      },
      Object {
        "errorMessage": "Select at least one proof document",
        "id": "define-passenger-proof",
      },
    ]
  }
  title="Define Passenger Type - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/definePassengerType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a minimum or maximum age",
            "id": "define-passenger-age-range",
          },
          Object {
            "errorMessage": "Enter a minimum or maximum age",
            "id": "define-passenger-age-range",
          },
          Object {
            "errorMessage": "Select at least one proof document",
            "id": "define-passenger-proof",
          },
        ]
      }
    />
    <div>
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--l"
      >
        <h1
          className="govuk-fieldset__heading"
          id="define-passenger-type-page-heading"
        >
          Provide passenger type details
        </h1>
      </legend>
      <span
        className="govuk-hint"
        id="define-passenger-type-hint"
      >
        Select if the passenger type requires an age range or proof document
      </span>
      <br />
      <br />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Does the passenger type have an age range?",
              "id": "define-passenger-age-range",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "age-range-required-conditional",
                "hint": Object {
                  "content": "Enter a minimum and/or maximum age for this passenger type.",
                  "id": "define-passenger-age-range-hint",
                },
                "id": "age-range-required",
                "inputErrors": Array [
                  Object {
                    "errorMessage": "Enter a minimum or maximum age",
                    "id": "age-range-min",
                  },
                  Object {
                    "errorMessage": "Enter a minimum or maximum age",
                    "id": "age-range-max",
                  },
                ],
                "inputType": "text",
                "inputs": Array [
                  Object {
                    "id": "age-range-min",
                    "label": "Minimum Age (if applicable)",
                    "name": "ageRangeMin",
                  },
                  Object {
                    "id": "age-range-max",
                    "label": "Maximum Age (if applicable)",
                    "name": "ageRangeMax",
                  },
                ],
                "label": "Yes",
                "name": "ageRange",
                "value": "Yes",
              },
              Object {
                "id": "age-range-not-required",
                "label": "No",
                "name": "ageRange",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-age-range"
      />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Does the passenger type require a proof document?",
              "id": "define-passenger-proof",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "proof-required-conditional",
                "hint": Object {
                  "content": "Select the applicable proof document(s).",
                  "id": "define-passenger-proof-hint",
                },
                "id": "proof-required",
                "inputErrors": Array [
                  Object {
                    "errorMessage": "Select at least one proof document",
                    "id": "proof-required",
                    "userInput": "",
                  },
                ],
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "membership-card",
                    "label": "Membership Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "student-card",
                    "label": "Student Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "identity-document",
                    "label": "Identity Document",
                    "name": "proofDocuments",
                  },
                ],
                "label": "Yes",
                "name": "proof",
                "value": "Yes",
              },
              Object {
                "id": "proof-not-required",
                "label": "No",
                "name": "proof",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-proof"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages definePassengerType should render errors correctly when radio errors are passed to the page 1`] = `
<Component
  description="Define Passenger Type page of the Fares Data Build Tool"
  errors={
    Array [
      Object {
        "errorMessage": "Choose one of the options below",
        "id": "define-passenger-age-range",
      },
      Object {
        "errorMessage": "Choose one of the options below",
        "id": "define-passenger-proof",
      },
    ]
  }
  title="Define Passenger Type - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/definePassengerType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose one of the options below",
            "id": "define-passenger-age-range",
          },
          Object {
            "errorMessage": "Choose one of the options below",
            "id": "define-passenger-proof",
          },
        ]
      }
    />
    <div>
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--l"
      >
        <h1
          className="govuk-fieldset__heading"
          id="define-passenger-type-page-heading"
        >
          Provide passenger type details
        </h1>
      </legend>
      <span
        className="govuk-hint"
        id="define-passenger-type-hint"
      >
        Select if the passenger type requires an age range or proof document
      </span>
      <br />
      <br />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Does the passenger type have an age range?",
              "id": "define-passenger-age-range",
            },
            "radioError": Array [
              Object {
                "errorMessage": "Choose one of the options below",
                "id": "define-passenger-age-range",
              },
            ],
            "radios": Array [
              Object {
                "dataAriaControls": "age-range-required-conditional",
                "hint": Object {
                  "content": "Enter a minimum and/or maximum age for this passenger type.",
                  "id": "define-passenger-age-range-hint",
                },
                "id": "age-range-required",
                "inputErrors": Array [],
                "inputType": "text",
                "inputs": Array [
                  Object {
                    "id": "age-range-min",
                    "label": "Minimum Age (if applicable)",
                    "name": "ageRangeMin",
                  },
                  Object {
                    "id": "age-range-max",
                    "label": "Maximum Age (if applicable)",
                    "name": "ageRangeMax",
                  },
                ],
                "label": "Yes",
                "name": "ageRange",
                "value": "Yes",
              },
              Object {
                "id": "age-range-not-required",
                "label": "No",
                "name": "ageRange",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-age-range"
      />
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Does the passenger type require a proof document?",
              "id": "define-passenger-proof",
            },
            "radioError": Array [
              Object {
                "errorMessage": "Choose one of the options below",
                "id": "define-passenger-proof",
              },
            ],
            "radios": Array [
              Object {
                "dataAriaControls": "proof-required-conditional",
                "hint": Object {
                  "content": "Select the applicable proof document(s).",
                  "id": "define-passenger-proof-hint",
                },
                "id": "proof-required",
                "inputErrors": Array [],
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "membership-card",
                    "label": "Membership Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "student-card",
                    "label": "Student Card",
                    "name": "proofDocuments",
                  },
                  Object {
                    "id": "identity-document",
                    "label": "Identity Document",
                    "name": "proofDocuments",
                  },
                ],
                "label": "Yes",
                "name": "proof",
                "value": "Yes",
              },
              Object {
                "id": "proof-not-required",
                "label": "No",
                "name": "proof",
                "value": "No",
              },
            ],
          }
        }
        key="define-passenger-proof"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
